refactoring and added earthquake and location service
