# src/services/reverseGeocoding/dtos/LocationDto.ts
@@ -2,6 +2,6 @@ export class LocationDto{
     latitude:number;
     longitude:number;
     city:string;
-    country:string;
+    countryName:string;
     countryCode:string;
 }
